# release-monitor-gcloud

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
charm/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt
charm/src/: charm.py  constants.py  models.py  release_filter_webhook_requirer.py  release_monitor_gcloud.py  rendering.py
charm/templates/: release-monitor-gcloud.service.tmpl
charm/tests/integration/: test_charm.py
charm/tests/unit/: test_charm.py
config/: example.yaml  local.webhook-only.yaml
docs/: juju-machine-charm-plan.md
production-config/: release-monitor-gcloud-config.yaml
scripts/: configure-local-release-filter.sh
src/gcs_release_monitor/: artifact_selection.py  cli.py  config.py  gcs_client.py  monitor.py  nextcloud_client.py  release_notes.py  state.py  types.py  webhook_client.py
src/gcs_release_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_artifact_selection.py  test_config.py  test_gcs_client_filters.py  test_monitor_dry_run.py  test_monitor_helpers.py  test_monitor_webhook_only.py  test_release_notes.py  test_webhook_client.py
